Related tdf#101467: fix a leak with pSalMask (vcl/bitmapex)

+ initialize pSalBmp+pSalMask to nullptr

Change-Id: I320e9cf98ef8224e98303bec1e58f59dc5b1ad4e
Reviewed-on: https://gerrit.libreoffice.org/41097
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 68b0a61f7d4f89fd25b7725830b828c821da7dad)